syntax="proto3";

package fwd;

option go_package="./proto";

//protoc -I proto --go_out=./proto/ --go_opt=paths=source_relative proto/fwd.proto
message Error {
    uint32 code    = 1; //错误码
    string msg     = 2; //错误简要
}

message ActionRequest {
    string action   = 1;    //请求操作
    string traceId  = 2;    //请求TraceId 
}

message ActionResponse {
    repeated Error errors  = 1; //错误集
    uint32   code          = 2; //HTTP状态码
    string   traceId       = 3; //信息简要
}

